--- a/LR.WebUI/Web.config
+++ b/LR.WebUI/Web.config
@@ -90,8 +90,9 @@
       <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
       <remove fileExtension=".woff2" />
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+      <clientCache cacheControlCustom="public;max-age" cacheControlMaxAge="10.00:00:00" cacheControlMode="UseMaxAge" />
     </staticContent>
-    
+    <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true" />
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
